this is a new commit

--- a/10.图论.ipynb
+++ b/10.图论.ipynb
@@ -478,6 +478,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78f149bd-d2c9-464b-8501-3e3afe1ea228",
+   "metadata": {},
+   "source": [
+    "#### **匹配问题**\n",
+    "* **人员分派问题:匈牙利算法**\n",
+    "* **最优分派问题:Kuhn-Munkres算法**\n",
+    "![](./img/Snipaste_2025-07-08_19-56-17.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4de68c13-f7f0-41e9-b730-bc8c5a295a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "工作分配对应关系为:\n",
+      "人员编号: [2 5 3 1 4]\n",
+      "工作编号: [1 5 3 4 2]\n",
+      "总的效益为: 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import networkx as nx\n",
+    "from networkx.algorithms.matching import max_weight_matching\n",
+    "a=np.array([[3,5,5,4,1], [2,2,0,2,2], [2,4,4,1,0],\n",
+    "[0,2,2,1,0], [1,2,1,3,3]])\n",
+    "b=np.zeros((10,10)); b[0:5,5:]=a; G=nx.Graph(b)\n",
+    "s0 = max_weight_matching(G)\n",
+    "s = [sorted(w) for w in s0]\n",
+    "L1=[x[0] for x in s]; L1=np.array (L1) +1 #人员编号\n",
+    "L2= [x [1] for x in s]; L2=np.array (L2)-4 #工作编号\n",
+    "c=a [L1-1,L2-1] #提取对应的效益\n",
+    "d=c.sum() #计算总的效益\n",
+    "print(\"工作分配对应关系为:\\n人员编号:\", L1)\n",
+    "print(\"工作编号:\", L2); print(\"总的效益为:\",d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4690530b-ef43-472d-869c-55eab1f81c83",
    "metadata": {},
    "source": [
@@ -494,67 +539,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78f149bd-d2c9-464b-8501-3e3afe1ea228",
+   "id": "17192d0d-2b38-4e71-9b31-2972d243ea52",
    "metadata": {},
    "source": [
-    "#### **匹配问题**"
+    "#### **最大流与最小费用流问题**\n",
+    "* **寻求最大流的标号法 (Ford-Fulkerson)**\n",
+    "* **最小费用流的迭代法**"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed85f0f2-750a-4f61-aeb4-f6e396b237dc",
+   "cell_type": "markdown",
+   "id": "cee9d4ac-6357-446f-8455-4f258a4d7c8f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### **PageRank算法**"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4de68c13-f7f0-41e9-b730-bc8c5a295a6f",
+   "cell_type": "markdown",
+   "id": "e276bbf7-fc24-4ba5-bfa8-ce6378a095b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0449b4b-6d93-488f-9654-dd55df2b1c73",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1999bf32-8c6d-4a9b-a928-e6eaed8b78dd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0f0123d-53d5-431f-b20e-d9d2a6139caa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c459d3c8-d279-4bff-b16d-804edc808fc2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e7642df-05b5-4a8d-ae03-f43f9d0b0a88",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### **复杂网络简介**"
+   ]
   }
  ],
  "metadata": {
